--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Elm App</title>
     
-    <!-- Google Fonts 
+    <!-- Google Fonts -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=JetBrains+Mono:wght@300;500;600&family=Klee+One:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    -->
 </head>
 <body>
     <noscript>
